--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react-dom": "^17.0.3",
+    "@types/react-modal": "^3.12.0",
+    "@types/react-router-dom": "^5.1.7",
     "json-server": "^0.16.3"
   }
 }
